--- a/.github/workflows/generate_pages.yml
+++ b/.github/workflows/generate_pages.yml
@@ -21,7 +21,7 @@ jobs:
         run: pip install --upgrade pip
 
       - name: Generate SEO pages
-        run: python generate_pages.py
+        run: python scripts/generate_pages.py
 
       - name: Commit changes
         run: |
