--- a/.github/workflows/rss_sitemap.yml
+++ b/.github/workflows/rss_sitemap.yml
@@ -1,28 +1,38 @@
-name: Auto Generate RSS + Sitemap
+name: Build RSS + Sitemap
 
-on:
-  schedule:
-    - cron: "*/1 * * * *"  # every 1 minutes
-  workflow_dispatch:
+on: push: branches: - main schedule: - cron: '0 */3 * * *'  # Every 3 hours
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
+jobs: generate: runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout Repo
-        uses: actions/checkout@v3
+steps:
+  - name: 📆 Checkout repo
+    uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: 3.11
+  - name: 🦍 Set up Python
+    uses: actions/setup-python@v4
+    with:
+      python-version: 3.11
 
-      - name: Install Dependencies
-        run: pip install flask
+  - name: ⚡ Install requests lib
+    run: pip install requests
 
-      - name: Run Generator
-        run: |
-          python Generate News + RSS + Sitemap.py
-          curl -s "http://www.google.com/ping?sitemap=https://plazead.replit.app/sitemap.xml" || echo "Google ping deprecated"
-          curl -s "https://www.bing.com/ping?sitemap=https://plazead.replit.app/sitemap.xml"
+  - name: 📈 Generate RSS Feed
+    run: python scripts/build_rss.py
+
+  - name: 🗺 Generate Sitemap
+    run: python scripts/build_sitemap.py
+
+  - name: ☁️ Ping Google & Bing
+    run: |
+      curl https://www.google.com/ping?sitemap=https://respirework.com/sitemap.xml
+      curl https://www.bing.com/ping?sitemap=https://respirework.com/sitemap.xml
+
+  - name: ✅ Commit & Push updates
+    run: |
+      git config --global user.email "rssbot@respirework.com"
+      git config --global user.name "RSSBot"
+      git add .
+      git commit -m "📰 Auto-generate RSS + Sitemap"
+      git push
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
