--- a/.github/workflows/rss_sitemap.yml
+++ b/.github/workflows/rss_sitemap.yml
@@ -1,38 +1,48 @@
-name: Build RSS + Sitemap
+name: Generate News + RSS + Sitemap
 
-on: push: branches: - main schedule: - cron: '0 */3 * * *'  # Every 3 hours
+on:
+  push:
+    branches:
+      - main
+  schedule:
+    - cron: '0 * * * *' # every hour
 
-jobs: generate: runs-on: ubuntu-latest
+jobs:
+  build:
+    runs-on: ubuntu-latest
 
-steps:
-  - name: 📆 Checkout repo
-    uses: actions/checkout@v3
+    steps:
+      - name: 🔄 Checkout code
+        uses: actions/checkout@v3
 
-  - name: 🦍 Set up Python
-    uses: actions/setup-python@v4
-    with:
-      python-version: 3.11
+      - name: 🐍 Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
 
-  - name: ⚡ Install requests lib
-    run: pip install requests
+      - name: 📦 Install dependencies
+        run: pip install requests
 
-  - name: 📈 Generate RSS Feed
-    run: python scripts/build_rss.py
+      - name: 📰 Run AMP, RSS, Sitemap Builder
+        run: python scripts/pages-build-deployment.py
 
-  - name: 🗺 Generate Sitemap
-    run: python scripts/build_sitemap.py
+      - name: 🕒 Touch file to force commit
+        run: echo "Updated at $(date -u)" > last-updated.txt
 
-  - name: ☁️ Ping Google & Bing
-    run: |
-      curl https://www.google.com/ping?sitemap=https://respirework.com/sitemap.xml
-      curl https://www.bing.com/ping?sitemap=https://respirework.com/sitemap.xml
+      - name: ✅ Commit & Push if changed
+        run: |
+          git config --global user.email "bot@respirework.com"
+          git config --global user.name "RespireBot"
+          git add .
+          if ! git diff --cached --quiet; then
+            git commit -m "🤖 Auto-update AMP pages, RSS, Sitemap"
+            git push
+          else
+            echo "No changes to commit."
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  - name: ✅ Commit & Push updates
-    run: |
-      git config --global user.email "rssbot@respirework.com"
-      git config --global user.name "RSSBot"
-      git add .
-      git commit -m "📰 Auto-generate RSS + Sitemap"
-      git push
-    env:
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: ☁️ Ping Google and Bing
+        run: |
+          curl https://www.google.com/ping?sitemap=https://respirework.com/sitemap.xml
+          curl https://www.bing.com/ping?sitemap=https://respirework.com/sitemap.xml
