--- a/.github/workflows/rss_sitemap.yml
+++ b/.github/workflows/rss_sitemap.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
   schedule:
-    - cron: '0 * * * *' # every hour
+    - cron: '0 * * * *' # every minute
 
 jobs:
   build:
